# systematic-alpha

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run_main.sh
config/: agent_lab.config.example
scripts/: monitor_agent_lab_wsl.sh  prefetch_kr_universe.ps1  prefetch_kr_universe.py  prefetch_us_market_cache.py  prefetch_us_universe.ps1  prefetch_us_universe.py  register_agent_lab_tasks.ps1  register_all_tasks.ps1  register_all_tasks_wsl.sh  register_kr_task.ps1  register_task.ps1  register_us_task.ps1  remove_agent_lab_tasks.ps1  remove_all_tasks.ps1  remove_all_tasks_wsl.sh  remove_kr_task.ps1  remove_task.ps1  remove_us_task.ps1  reset_all_tasks_wsl.sh  reset_tasks_preserve_state_wsl.sh  run_agent_lab.ps1  run_agent_lab_wsl.sh  run_daily.ps1  run_daily_wsl.sh
systematic_alpha/: __init__.py  analytics.py  cli.py  credentials.py  dotenv.py  helpers.py  models.py  mojito_loader.py  network_env.py  selector.py  selector_us.py
systematic_alpha/agent_lab/: __init__.py  accounting.py  agents.py  auto_strategy.py  cli.py  identity.py  llm_client.py  notify.py  orchestrator.py  paper_broker.py  risk_engine.py  schemas.py  self_heal.py  storage.py  strategy_registry.py  telegram_chat.py
systematic_alpha/data/: us_sp500_snapshot.csv  us_universe_default.txt
tests/: test_agent_lab_orchestrator.py  test_agent_lab_risk_engine.py
